--- a/submission/references.bib
+++ b/submission/references.bib
@@ -57,6 +57,24 @@
   url = {https://CRAN.R-project.org/package=matrixStats}
 }
 
+@article{Buchfink2015,
+  title = {Fast and Sensitive Protein Alignment Using {{DIAMOND}}},
+  author = {Buchfink, Benjamin and Xie, Chao and Huson, Daniel H.},
+  date = {2015-01},
+  journaltitle = {Nat. Methods},
+  volume = {12},
+  pages = {59--60},
+  publisher = {{Nature Publishing Group}},
+  issn = {1548-7105},
+  doi = {10.1038/nmeth.3176},
+  url = {https://www.nature.com/articles/nmeth.3176},
+  urldate = {2020-07-08},
+  file = {/home/marino/Zotero/storage/I3XJXIXK/nmeth.html},
+  issue = {1},
+  langid = {english},
+  number = {1}
+}
+
 @article{Burke2009,
   title = {Selective Extraction of Bacterial {{DNA}} from the Surfaces of Macroalgae.},
   author = {Burke, Catherine and Kjelleberg, Staffan and Thomas, Torsten},
@@ -213,6 +231,44 @@
   number = {1-3}
 }
 
+@article{Huerta-Cepas2017,
+  title = {Fast Genome-Wide Functional Annotation through Orthology Assignment by {{eggNOG}}-Mapper},
+  author = {Huerta-Cepas, Jaime and Forslund, Kristoffer and Coelho, Luis Pedro and Szklarczyk, Damian and Jensen, Lars Juhl and von Mering, Christian and Bork, Peer},
+  date = {2017-08-01},
+  journaltitle = {Mol. Biol. Evol.},
+  volume = {34},
+  pages = {2115--2122},
+  issn = {1537-1719},
+  doi = {10.1093/molbev/msx148},
+  eprint = {28460117},
+  eprinttype = {pmid},
+  file = {/home/marino/Zotero/storage/VNC6CZR8/Huerta-Cepas et al. - 2017 - Fast Genome-Wide Functional Annotation through Ort.pdf},
+  keywords = {Algorithms,comparative genomics,Computer Simulation,Databases; Genetic,Databases; Protein,functional annotation,gene function,Gene Ontology,Genome,genomics,metagenomics,orthology,Phylogeny,Sequence Alignment,Sequence Analysis; Protein,Software},
+  langid = {english},
+  number = {8},
+  options = {useprefix=true},
+  pmcid = {PMC5850834}
+}
+
+@article{Huerta-Cepas2019,
+  title = {{{eggNOG}} 5.0: A Hierarchical, Functionally and Phylogenetically Annotated Orthology Resource Based on 5090 Organisms and 2502 Viruses},
+  shorttitle = {{{eggNOG}} 5.0},
+  author = {Huerta-Cepas, Jaime and Szklarczyk, Damian and Heller, Davide and Hern\'andez-Plaza, Ana and Forslund, Sofia K. and Cook, Helen and Mende, Daniel R. and Letunic, Ivica and Rattei, Thomas and Jensen, Lars J. and von Mering, Christian and Bork, Peer},
+  date = {2019-01-08},
+  journaltitle = {Nucleic Acids Res},
+  volume = {47},
+  pages = {D309-D314},
+  publisher = {{Oxford Academic}},
+  issn = {0305-1048},
+  doi = {10.1093/nar/gky1085},
+  url = {https://academic.oup.com/nar/article/47/D1/D309/5173662},
+  urldate = {2020-07-08},
+  file = {/home/marino/Zotero/storage/G8HXSNGW/Huerta-Cepas et al. - 2019 - eggNOG 5.0 a hierarchical, functionally and phylo.pdf;/home/marino/Zotero/storage/UVETDQVJ/5173662.html},
+  langid = {english},
+  number = {D1},
+  options = {useprefix=true}
+}
+
 @article{Hultman2015,
   title = {Multi-Omics of Permafrost, Active Layer and Thermokarst Bog Soil Microbiomes.},
   author = {Hultman, Jenni and Waldrop, Mark P and Mackelprang, Rachel and David, Maude M and McFarland, Jack and Blazewicz, Steven J and Harden, Jennifer and Turetsky, Merritt R and McGuire, A David and Shah, Manesh B and VerBerkmoes, Nathan C and Lee, Lang Ho and Mavrommatis, Kostas and Jansson, Janet K},
@@ -226,6 +282,22 @@
   eprinttype = {pmid},
   issue = {7551},
   number = {7551}
+}
+
+@article{Hyatt2010,
+  title = {Prodigal: Prokaryotic Gene Recognition and Translation Initiation Site Identification},
+  shorttitle = {Prodigal},
+  author = {Hyatt, Doug and Chen, Gwo-Liang and LoCascio, Philip F. and Land, Miriam L. and Larimer, Frank W. and Hauser, Loren J.},
+  date = {2010-03-08},
+  journaltitle = {BMC Bioinformatics},
+  volume = {11},
+  pages = {119},
+  issn = {1471-2105},
+  doi = {10.1186/1471-2105-11-119},
+  url = {https://doi.org/10.1186/1471-2105-11-119},
+  urldate = {2020-07-08},
+  file = {/home/marino/Zotero/storage/YR8CVGLT/Hyatt et al. - 2010 - Prodigal prokaryotic gene recognition and transla.pdf;/home/marino/Zotero/storage/3S4QE4MS/1471-2105-11-119.html},
+  number = {1}
 }
 
 @article{Jiang2015,
@@ -258,6 +330,41 @@
   eprinttype = {pmid},
   issue = {17},
   number = {17}
+}
+
+@article{Li2009a,
+  title = {Fast and Accurate Short Read Alignment with {{Burrows}}\textendash{{Wheeler}} Transform},
+  author = {Li, Heng and Durbin, Richard},
+  date = {2009-07-15},
+  journaltitle = {Bioinformatics},
+  volume = {25},
+  pages = {1754--1760},
+  publisher = {{Oxford Academic}},
+  issn = {1367-4803},
+  doi = {10.1093/bioinformatics/btp324},
+  url = {https://academic.oup.com/bioinformatics/article/25/14/1754/225615},
+  urldate = {2020-07-08},
+  file = {/home/marino/Zotero/storage/3HV7JHHG/Li and Durbin - 2009 - Fast and accurate short read alignment with Burrow.pdf;/home/marino/Zotero/storage/K3VN8PB9/225615.html},
+  langid = {english},
+  number = {14}
+}
+
+@article{Li2015,
+  title = {{{MEGAHIT}}: An Ultra-Fast Single-Node Solution for Large and Complex Metagenomics Assembly via Succinct de {{Bruijn}} Graph},
+  shorttitle = {{{MEGAHIT}}},
+  author = {Li, Dinghua and Liu, Chi-Man and Luo, Ruibang and Sadakane, Kunihiko and Lam, Tak-Wah},
+  date = {2015-05-15},
+  journaltitle = {Bioinformatics},
+  volume = {31},
+  pages = {1674--1676},
+  publisher = {{Oxford Academic}},
+  issn = {1367-4803},
+  doi = {10.1093/bioinformatics/btv033},
+  url = {https://academic.oup.com/bioinformatics/article/31/10/1674/177884},
+  urldate = {2020-07-08},
+  file = {/home/marino/Zotero/storage/EU3RLL24/Li et al. - 2015 - MEGAHIT an ultra-fast single-node solution for la.pdf;/home/marino/Zotero/storage/6RNRWSWC/177884.html},
+  langid = {english},
+  number = {10}
 }
 
 @article{Longford2007,
