--- a/submission/manuscript.Rmd
+++ b/submission/manuscript.Rmd
@@ -171,8 +171,8 @@ plot <- filter(community, taxlevel==2 |
   bind_rows(summarise_all(., list(~ifelse(is.numeric(.), 100-sum(.), paste("Other"))))) %>%
   rename_at(names(metadata), ~unname(metadata)) %>%
   arrange(taxon %in% "No_Relative") %>%
-  mutate(mean=rowMeans(select(., contains(c("SCy", "FCyM", "FCaM", "FCa"))), na.rm=TRUE)) %>%
-  mutate(sd=rowSds(as.matrix(select(., contains(c("SCy", "FCyM", "FCaM", "FCa")))), na.rm=TRUE)) %>%
+  mutate(mean=rowMeans(select(., contains("SCy"), contains("FCyM"), contains("FCaM"), contains("FCa")), na.rm=TRUE)) %>%
+  mutate(sd=rowSds(as.matrix(select(., contains("SCy"), contains("FCyM"), contains("FCaM"), contains("FCa"))), na.rm=TRUE)) %>%
   arrange(desc(mean))
 ```
 
@@ -181,7 +181,7 @@ plot <- filter(community, taxlevel==2 |
 community <- read_tsv("data/mothur/chloroplast.pds.wang.tax.summary") %>%
   filter(taxon!="Root")
 
-# Calculating relative abundaces
+# Calculating relative abundances
 community <- group_by(community, taxlevel) %>%
   mutate_at(5:ncol(.), list(~. / sum(.) * 100)) %>%
   ungroup()
@@ -195,8 +195,8 @@ metadata <- read_tsv("data/raw/metadata.csv") %>%
 # Selection of groups for plotting
 chloroplast <- filter(community, taxlevel==5) %>%
   rename_at(names(metadata), ~unname(metadata)) %>%
-  mutate(mean=rowMeans(select(., contains(c("SCy", "FCyM", "FCaM", "FCa"))), na.rm=TRUE)) %>%
-  mutate(sd=rowSds(as.matrix(select(., contains(c("SCy", "FCyM", "FCaM", "FCa")))), na.rm=TRUE)) %>%
+  mutate(mean=rowMeans(select(., contains("SCy"), contains("FCyM"), contains("FCaM"), contains("FCa")), na.rm=TRUE)) %>%
+  mutate(sd=rowSds(as.matrix(select(., contains("SCy"), contains("FCyM"), contains("FCaM"), contains("FCa"))), na.rm=TRUE)) %>%
   arrange(desc(mean))
 ```
 
@@ -221,7 +221,6 @@ The DNA was isolated according to the protocol for isolation from filters descri
 ### Illumina 16S rRNA sequencing
 An aliquot of isolated DNA was treated with RNase A (final concentration 200 \si{\ug\per\ml}) for 2 \si{\hour} at 37 \si{\degreeCelsius}. The DNA concentration was determined using the Quant-iT PicoGreen dsDNA Assay Kit (Invitrogen, USA) according to the manufacturer’s instructions and diluted to 1 \si{\ng\per\ul}. The V4 region of the 16S rRNA gene was amplified using a two-step PCR procedure. In the first PCR the 515F (5'-GTGYCAGCMGCCGCGGTAA-3') and 806R (5'-GGACTACNVGGGTWTCTAAT-3') primers from the Earth Microbiome Project (http://press.igsb.anl.gov/earthmicrobiome/protocols-and-standards/16s/) were used to amplify the target region [@Caporaso2012; @Apprill2015; @Parada2016]. These primers contained on their 5' end a tagged sequence. Each sample was amplified in four parallel 25 \si{\ul} reactions of which each contained: 1 × Q5 Reaction Buffer , 0.2 \si{\milli\Molar} of dNTPmix, 0.7 \si{\mg\per\ml} BSA (Bovine Serum Albumin), 0.2 \si{\micro\Molar} of forward and reverse primers, 0.5 U of Q5 High-Fidelity DNA Polymerase (New England Biolabs, USA) and 5 \si{\ng} of DNA template. Cycling conditions were: initial denaturation at 94 \si{\degreeCelsius} for 3 \si{\minute}, 20 cycles of denaturation at 94 \si{\degreeCelsius} for 45 \si{\s}, annealing at 50 \si{\degreeCelsius} for 60 \si{\s} and elongation at 72 \si{\degreeCelsius} for 90 \si{\s}, finalized by an elongation step at 72 \si{\degreeCelsius} for 10 \si{\minute}. The four parallel reactions volumes were pooled and PCR products were purified using the GeneJET PCR Purification Kit (Thermo Fisher Scientific, USA) according to the manufacturer's instructions and following the protocol that included isopropanol addition for better small DNA fragment yield. The column was eluted in 30 \si{\ul} of deionized water. Purified PCR products were sent for Illumina MiSeq sequencing (2 × 250 bp) at IMGM Laboratories, Martinsried, Germany. Before sequencing, at IMGM the second PCR amplification of the two-step PCR procedure was performed using primers targeting the tagged region incorporated in the first PCR. In addition, these primers contained adapter and sample-specific index sequences. The second PCR was carried out for 8 cycles. Beside samples, a positive and negative control were sequenced. A negative control was comprised of four parallel PCR reactions without DNA template, while for a positive control a mock community composed of evenly mixed DNA material originating from 20 bacterial strains (ATCC MSA-1002, ATCC, USA) was used. Sequences obtained in this study have been deposited in the European Nucleotide Archive (ENA) at EMBL-EBI under accession numbers SAMEA6786270, SAMEA6648792 -- SAMEA6648794, SAMEA6648809 -- SAMEA6648811.
 
-### Sequence analysis
 ```{r}
 # Calculation of the error rate based on the ATCC MSA-1002 mock community
 error <- read_tsv("data/mothur/raw.trim.contigs.good.unique.good.filter.unique.precluster.pick.pick.pick.error.summary", na="") %>%
@@ -235,6 +234,11 @@ nc <- read_tsv("data/mothur/raw.trim.contigs.good.unique.good.filter.unique.prec
   select(NC_1)
 ```
 Obtained sequences were analyzed on the computer cluster Isabella (University Computing Center, University of Zagreb) using mothur (version 1.43.0) [@Schloss2009] according to the MiSeq Standard Operating Procedure (MiSeq SOP; https://mothur.org/wiki/MiSeq_SOP) [@Kozich2013] and recommendations given from the Riffomonas project to enhance data reproducibility (http://www.riffomonas.org/). For alignment and classification of sequences the SILVA SSU Ref NR 99 database (release 138; http://www.arb-silva.de) was used [@Quast2013; @Yilmaz2014]. Sequences classified as chloroplasts by SILVA were exported and reclassifed using mothur and the RDP (http://rdp.cme.msu.edu/) training set (version 16) reference files adapted for mothur [@Cole2014]. In comparison to SILVA, RDP allows a more detailed classification of chloroplast sequences. Pipeline data processing and visualization was done using R (version 3.6.0) [@RCoreTeam2019],  package tidyverse (version 1.3.0) [@Wickham2019] and multiple other packages [@Xie2014; @Xie2015; @Xie2019a; @Xie2019; @Xie2020; @Allaire2019; @Xie2018; @Zhu2019; @Neuwirth2014; @Bengtsson2020]. The detailed analysis procedure including the R Markdown file for this paper are available as a GitHub repository (https://github.com/mkorlevic/Korlevic_SelectiveRemoval_EnvironMicrobiol_2020). Based on the ATCC MSA-1002 mock community included in the analysis a sequencing error rate of `r error` \si{\percent} was determined, which is in line with previously reported values for next-generation sequencing data [@Kozich2013; @Schloss2016]. In addition, the negative control processed together with the samples yielded only `r nc` sequences after sequence quality curation.
+
+### Metagenomics
+Four samples were selected and sent on dry ice to IMGM Laboratories, Martinsried, Germany for metagenomic sequencing. DNA was purified using AMPure XP Beads (Beckman Coulter, USA) applying a bead:DNA ratio of 1:1 (v/v), quantified with a Qubit dsDNA HS Assay Kit (Thermo Fisher Scientific, USA) and check for integrity on a 1 \si{\percent} agarose gel. Metagenomic sequencing libraries were generated from 300 \si{\ng} of input DNA using a NEBNext Ultra II FS DNA Library Prep Kit for Illumina (New England Biolabs, USA) according to the manufacturer's instructions. Fragments were selected (500 -- 700 bp) using AMPure XP Beads, PCR enriched for 3 -- 5 cycles and quality controlled. Libraries generated from different DNA samples were pooled and sequenced on an Illumina NovaSeq 6000 sequencing system (2 × 250 bp).
+
+Obtained sequences were assembled individually using MEGAHIT (version  1.1.2) [@Li2015] under default settings. Putative genes were predicted from contings longer than 200 bp using Prodigal (version  2.6.3) [@Hyatt2010] in metagenome mode (-p meta). Abundances of predicted genes were expressed as Reads Per Kilobase Million (RPKM) and calculated using the BWA algorithm (version  0.7.16a) [@Li2009a]. All predicted genes were functionally annotated using the eggNOG-mapper [@Huerta-Cepas2017] and eggNOG database (version 5.0) [@Huerta-Cepas2019]. The taxonomic classification of sequences was determined using the lowest common ancestor algorithm adapted from DIAMOND (version 0.8.36) [@Buchfink2015] and by searching against the non-redundant database (NR). To determine phylogeny the top 10 \si{\percent} hits with an e-value < 1 × 10^-5^ were used (\-\-top 10).
 
 ### Protein isolation
 Proteins were isolated according to the protocol for isolation from soil described in @Chourey2010 and modified by @Hultman2015. These protocols were further modified and adapted for protein isolation from microbial communities form macrophyte surfaces as described below. 20 \si{\ml} of protein extraction buffer (4 \si{\percent} SDS, 100 \si{\milli\Molar} Tris-HCl [pH 8.0]) was added to 5 \si{\g} wet weight of leaves or 10 \si{\g} wet weight of thalli. The mixture was incubated in boiling water for 5 \si{\minute}, vortexed for 10 \si{\minute} and incubated again in boiling water for 5 \si{\minute}. After a brief vortex the lysate was transferred to a clean tube separating the host leaves or thalli from the mixture containing lyzed epiphytic cells. Dithiothreitol (DTT; final concentration 24 \si{\milli\Molar}) was added and proteins were precipitated with chilled 100 \si{\percent} trichloroacetic acid (TCA; final concentration 20 \si{\percent}) overnight at \num{-20} °C. Precipitated proteins were centrifuged at 10,000 × g and 4 \si{\degreeCelsius} for 40 \si{\minute}. The obtained protein pellet was washed three times with chilled acetone. During the first washing step the pellet was transferred to a clean 1.5 \si{\ml} tube. After each washing step samples were centrifuged at 20,000 × g and 4 \si{\degreeCelsius} for 5 \si{\minute}. Dried pellets were stored at \num{-80} °C until further analysis.
